--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,15 @@ h4, .h4,
     color: var(--white);
     padding: 5px 10px;
     text-transform: uppercase;
+    border: 1px solid transparent;
+    transition: background-color var(--transition), color var(--transition), border var(--transition), border-radius var(--transition);
+}
+
+.btn:hover {
+    color: var(--dark);
+    border-radius: 2rem;
+    background-color: transparent;
+    border: 1px solid var(--dark);
 }
 
 
@@ -271,7 +280,16 @@ h4, .h4,
 .banner__form button {
     padding: 5px;
     border: none;
+    width: 30px;
+    height: 30px;
     background-color: transparent;
+    border-radius: 50%;
+    transition: background-color var(--transition), color var(--transition);
+}
+
+.banner__form button:hover {
+    background-color: var(--dark);
+    color: var(--white);
 }
 
 /* about */
@@ -290,10 +308,19 @@ h4, .h4,
 .design__item {
     max-width: 35rem;
     margin: 1rem auto;
+    transition: box-shadow var(--transition);
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.design__item:hover {
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, .3);
 }
 
 .design__item h3 {
     color: var(--dark);
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .design__item__img {
@@ -466,7 +493,7 @@ h4, .h4,
 @supports (grid-area: auto) {
     .about__content {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
+        grid-template-columns: 1fr;
         gap: 2rem;
     }
 
@@ -476,16 +503,24 @@ h4, .h4,
 
     .design__content {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+        grid-template-columns: 1fr;
         gap: 2rem;
         
     }
 
     .blog__content {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(38rem, 1fr));
+        grid-template-columns: 1fr;
         gap: 2rem;
         
+    }
+
+    @media (min-width: 768px) {
+        .about__content,
+        .design__content, 
+        .blog__content {
+            grid-template-columns: repeat(auto-fit, minmax(35rem ,1fr));
+        }
     }
 }
 
